# nexus-agi

./: .gitignore  AGENTS.md  CODEOWNERS  PLAN.md  pyproject.toml
.github/skills/create-issue/: SKILL.md
.github/skills/create-pr/: SKILL.md
.github/skills/resolve-issue/: SKILL.md
.github/skills/review-pr/: SKILL.md
nexus_agi/: __init__.py  agent.py  cli.py  dashboard.py  models.py  orchestrator.py  planner.py  providers.py  storage.py
tests/: test_core.py  test_dashboard.py
